manifests/002_service.yaml

apiVersion: v1
kind: Service

metadata:
    name: wil-app-service

spec:
    selector:
        app: wil-app

    ports:
        - protocol: TCP
          port: 8888
