manifests/pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-django
  labels:
    app: my-django
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-django
  template:
    metadata:
      labels:
        app: my-django
    spec:
      containers:
        - name: my-container
          image: logx1/django-on-ec2:v1
          ports:
            - containerPort: 80
---
apiVersion: v2
kind: Service
metadata:
  name: my-django-svc
spec:
  type: LoadBalancer
  selector:
    app: my-django
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 80
