manifests/003_ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
    name: wil-app-ingress

spec:
  rules:
    - host: wil.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wil-app-service
                port:
                  number: 8888
